--- a/Flagrum.Web/Features/AssetExplorer/Base/Preview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Base/Preview.razor
@@ -1,54 +1,47 @@
-﻿@using Flagrum.Web.Features.AssetExplorer.Data
-@using Flagrum.Web.Persistence.Entities
+﻿@using Flagrum.Web.Persistence.Entities
+@using Index = Flagrum.Web.Features.AssetExplorer.Index
+@using Flagrum.Web.Features.AssetExplorer.Data
 @inject FlagrumDbContext Context
-@inject IStringLocalizer<Features.AssetExplorer.Index> Localizer
+@inject IStringLocalizer<Index> Localizer
 @inject IStringLocalizer<Preview> PreviewLocalizer
 @inject SettingsService Settings
 
-<div class="border-t border-b border-r border-dark-550 flex flex-col" style="flex: 1 1 auto;">
-    <div class="row border-b border-dark-550 px-4 py-3 bg-dark">
-        @if (Item == null)
-        {
-            <strong class="flex-grow font-display">@Localizer["NoFileSelected"]</strong>
-        }
-        else
-        {
-            <Hyperlink Uri="@EarcUri" Text="@EarcRelativePath" CssClass="mt-0"/>
-        }
-    </div>
-    @switch (Item?.Type)
-    {
-        case ExplorerItemType.Texture:
-            <TexturePreview Item="@Item"/>
-            break;
-        case ExplorerItemType.Material:
-            <MaterialPreview Item="@Item"/>
-            break;
-        case ExplorerItemType.Xml:
-            <XmlPreview Item="@Item"/>
-            break;
-        case ExplorerItemType.Text:
-            <TextPreview Item="@Item"/>
-            break;
-        case ExplorerItemType.Model:
-            <ModelPreviewV2 Item="@Item"/>
-            break;
-        default:
-            <div class="flex-grow flex flex-row items-center">
-                <div class="mx-auto">
-                    <strong class="text-grey-500">
-                        @PreviewLocalizer["NoPreview"]
-                    </strong>
-                </div>
+@switch (Item?.Type)
+{
+    case ExplorerItemType.Texture:
+        <TexturePreview Item="@Item"/>
+        break;
+    case ExplorerItemType.Material:
+        <MaterialPreview Item="@Item"/>
+        break;
+    case ExplorerItemType.Xml:
+        <XmlPreview Item="@Item"/>
+        break;
+    case ExplorerItemType.Text:
+        <TextPreview Item="@Item"/>
+        break;
+    case ExplorerItemType.Model:
+        <ModelPreview Item="@Item"/>
+        break;
+    default:
+        <div class="flex-grow flex flex-row items-center">
+            <div class="mx-auto">
+                <strong class="text-grey-500">
+                    @PreviewLocalizer["NoPreview"]
+                </strong>
             </div>
-            break;
-    }
-</div>
+        </div>
+        break;
+}
 
 @code
 {
-    private AssetExplorerItem _item;
-    private AssetExplorerItem Item
+    [CascadingParameter(Name = "AssetExplorer")]
+    public AssetExplorer AssetExplorer { get; set; }
+
+    private IAssetExplorerNode _item;
+
+    public IAssetExplorerNode Item
     {
         get => _item;
         set
@@ -56,7 +49,7 @@
             if (_item != value)
             {
                 _item = value;
-                EarcRelativePath = Context.GetArchiveRelativeLocationByUri(Item.Uri);
+                EarcRelativePath = Context.GetArchiveRelativeLocationByUri(Item.Path);
                 var relativePath = EarcRelativePath.Contains('\\')
                     ? '\\' + EarcRelativePath[..EarcRelativePath.LastIndexOf('\\')]
                     : "";
@@ -64,13 +57,13 @@
             }
         }
     }
-    
-    private string EarcRelativePath { get; set; }
-    private string EarcUri { get; set; }
 
-    public void SetItem(AssetExplorerNode node)
+    public string EarcRelativePath { get; set; }
+    public string EarcUri { get; set; }
+
+    public void SetItem(IAssetExplorerNode node)
     {
-        Item = AssetExplorerItem.FromNode(node, Context);
-        StateHasChanged();
+        Item = node;
+        AssetExplorer.CallStateHasChanged();
     }
 }
