--- a/Flagrum.Web/Features/AssetExplorer/Previews/XmlPreview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/XmlPreview.razor
@@ -1,7 +1,7 @@
 ﻿@using Flagrum.Web.Features.AssetExplorer.Data
 @using System.Text
 @using Flagrum.Core.Ebex.Xmb2
-<div class="p-6 h-full">
+<div class="p-6 h-full" style="max-height: 100%; max-width: 100%;">
     <div class="box p-4 h-full overflow-auto">
         <Virtualize Items="Lines">
             <span @key="context.Index" class="block" style="white-space: nowrap">@context.Line</span>
@@ -11,12 +11,12 @@
 
 @code
 {
-    private AssetExplorerItem _previousItem;
+    private IAssetExplorerNode _previousItem;
 
     private List<(int Index, string Line)> Lines { get; set; }
 
     [Parameter]
-    public AssetExplorerItem Item { get; set; }
+    public IAssetExplorerNode Item { get; set; }
 
     protected override void OnParametersSet()
     {
@@ -25,7 +25,7 @@
             return;
         }
 
-        var xmb2 = Item.Data();
+        var xmb2 = Item.Data;
         var stringBuilder = new StringBuilder();
         Xmb2Document.Dump(xmb2, stringBuilder);
         var counter = 0;
