--- a/Flagrum.Web/Features/ModLibrary/Editor/ModelExplorerRow.razor
+++ b/Flagrum.Web/Features/ModLibrary/Editor/ModelExplorerRow.razor
@@ -6,7 +6,7 @@
 
 <div class="row py-1 pr-2 pl-4 transition-colors hover:bg-grey-700 select-none cursor-pointer"
      @onclick="() => OnClick(Node)">
-    <span class="material-icons text-sm">@Icon(Type(Node))</span>
+    <span class="material-icons text-sm">@Node.Icon</span>
     <span class="pl-2 flex-grow text-sm" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@Node.Name</span>
 </div>
 
@@ -16,9 +16,9 @@
     public ModelBrowserModal Parent { get; set; }
 
     [Parameter]
-    public AssetExplorerNode Node { get; set; }
+    public IAssetExplorerNode Node { get; set; }
 
-    private void OnClick(AssetExplorerNode node)
+    private void OnClick(IAssetExplorerNode node)
     {
         Parent.SetNode(node);
     }
